test/files/pos/protected-static/JavaClass.java
package bippy;

public abstract class JavaClass {
  protected static class Inner {}
  protected abstract Inner getInner();
}
