test/files/neg/protected-static-fail/J.java
package bippy;

public class J {
  private static String f() {
    return "hi mom";
  }
}